webkitfullscreenchange does not fire for shadow DOM elements https://bugs.webkit.org/show_bug.cgi?id=216607

Patch by Tetsuharu Ohzeki <tetsuharu.ohzeki@gmail.com> on 2020-09-28
Reviewed by Ryosuke Niwa.

Source/WebCore:

This bug was caused by the `webkitfullscreenchange` event being fired
but without _composed_ flag set.

This patch fixed the bug by making it composed as defined as
the step 3-2 of https://fullscreen.spec.whatwg.org/#run-the-fullscreen-steps.
so that event listeners outside shadow tree could observe it.

Test: fast/shadow-dom/fullscreen-in-shadow-event-should-propagate.html

* dom/FullscreenManager.cpp:
(WebCore::FullscreenManager::dispatchFullscreenChangeOrErrorEvent):

LayoutTests:

Added a regression test for making an element inside a shadow tree full screen,
and listening to `webkitfullscreenchange` outside the shadow tree.

* fast/shadow-dom/fullscreen-in-shadow-event-should-propagate-expected.txt: Added.
* fast/shadow-dom/fullscreen-in-shadow-event-should-propagate.html: Added.
* platform/ios-wk2/TestExpectations:
Other testcases related to fullscreen API in fast/shadow-dom/ are also
disabled for ios-wk2.

Canonical link: https://commits.webkit.org/229853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267724 268f45cc-cd09-0410-ab3c-d52691b4dbfc